--- a/index.html
+++ b/index.html
@@ -192,17 +192,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading">Want to see more of my work?</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Checkout my Github and Blog</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-rss fa-3x" aria-hidden="true"></i>
+                      <a href="https://wordpress.com/stats/insights/tiyfinalproject.wordpress.com</p>"><i class="fa fa-rss fa-3x" aria-hidden="true"></i></a>
 
-                    <a href="https://wordpress.com/stats/insights/tiyfinalproject.wordpress.com</p>"><p>Lingo Project Blog</p></a>
+                  
                 </div>
                 <div class="col-lg-4 text-center">
-                    <p><a href="gabrielbrickle@gmail.com">gabrielbrickle@gmail.com</a></p>
+                  <a href="https://github.com/gabrielbrickle"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+                    <!-- <p><a href="gabrielbrickle@gmail.com">gabrielbrickle@gmail.com</a></p> -->
                 </div>
             </div>
         </div>
